added webscraper and few APIs
