# api/router/refresh_token_router.go
@@ -1,9 +1,8 @@
 package router
 
 import (
-	"go_stream_api/api/common"
+	"go_stream_api/api/controller"
 	"go_stream_api/api/token"
-	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
@@ -11,29 +10,5 @@ import (
 func RefreshTokenRouter(rg *gin.RouterGroup) {
 	group := rg.Group("/token")
 	group.Use(token.JWTRefreshMiddleware())
-	group.GET("/refresh", refreshTokenHandler)
-}
-
-type refreshTokenResponse struct {
-	AuthToken string `json:"auth_token"`
-}
-
-// @Summary Generate auth token by providing refresh token
-// @Description Refresh token will have later expiry date than auth token so user can reissue auth token whenever expired
-// @Tags Token
-// @Produce json
-// @Success 200 {object} common.baseResponse{data=router.refreshTokenResponse}
-// @Router /token/refresh [get]
-// @Param Authorization header string true "Insert your refresh token" default(Bearer <Add access token here>)
-func refreshTokenHandler(c *gin.Context) {
-	authToken, err := token.GenerateJWT(token.Authorization)
-	if err != nil {
-		common.WrapWithBaseResponse(c, nil, "Error while trying to refresh authorization token", http.StatusInternalServerError)
-		return
-	}
-
-	response := refreshTokenResponse{
-		AuthToken: authToken,
-	}
-	common.WrapWithBaseResponse(c, response, "Success refreshing authorization token", http.StatusOK)
+	group.GET("/refresh", controller.RefreshTokenHandler)
 }
